# bandersnatch

./: .gitignore  Cargo.toml  LICENSE   README.md  benchmark.md  rustfmt.toml
.github/workflows/: self_check.yml
banderpy/: Cargo.toml  makefile
banderpy/python/: bandersnatch.py  example.py
banderpy/src/: lib.rs
bandersnatch/: Cargo.toml
bandersnatch/benches/: bandersnatch_bench.rs
bandersnatch/examples/: constraint_count_bandersnatch.rs  constraint_count_bandersnatch_glv.rs
bandersnatch/script/: bandersnatch.sage  bls12377.sage
bandersnatch/src/: lib.rs
bandersnatch/src/constraints/: curves.rs  glv.rs  mod.rs  non_native.rs  test.rs
bandersnatch/src/curves/: fix_base_mul.rs  glv.rs  mod.rs  tests.rs
bandersnatch/src/fields/: fr.rs
benches/: bandersnatch_bench.rs
examples/: constraint_count.rs  constraint_count_bandersnatch.rs  constraint_count_bandersnatch_glv.rs  constraint_count_jubjub.rs
script/: bandersnatch copy.sage  jubjub.sage
src/: lib.rs
src/constraints/: curves.rs  glv.rs  mod.rs  test.rs
src/curves/: glv.rs  mod.rs  tests.rs
src/fields/: fq.rs  fr.rs  tests.rs
